# Perseus-frontend

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  README_Gemini_Context.md  build.sh  clean.sh  comp.json  env.sh  gdb-build.sh  init.json  makefile  open.json  plan.txt  re-build.sh  req.jsonl  req.txt  req1.txt  req2.txt  req3.txt  req_format.jsonl  req_full.txt  req_full_format.txt  res.txt  resources.qrc  test.cmake  test.cpp  test.js  test.py  test2.cmake  test2.py  test_err.cmake  test_format.py  test_format2.py  test_tmp
.cache/clangd/index/: ConstantsClass.h.7F1E4B8C83D9583B.idx  ConstantsNum.h.AC6707EF0C5D502A.idx  ConstantsStr.h.D06E2BE6E9E5F7DA.idx  LosAbstractRunner.cpp.55FF21A309DF4C70.idx  LosAbstractRunner.h.F3AADC866AB9DB6D.idx  LosCompleterUi.cpp.A2A89FE8EE7218C3.idx  LosCompleterUi.h.255CD1ADF749366F.idx  LosCompleterUi_style.h.8F6E8232BE8427C9.idx  LosConfig.cpp.1E223572E20EAC50.idx  LosConfig.h.EC2ACC65B6971AE1.idx  LosConfigCMake.cpp.D82FA26B20478D9F.idx  LosConfigCMake.h.BFBACC33FC5D869D.idx  LosConfigFactory.cpp.74CA57978728E190.idx  LosConfigFactory.h.D5D5BCAEB545020A.idx  LosConfigManager.cpp.042369B75358D5CE.idx  LosConfigManager.h.60D0C589BAC42D1D.idx  LosEditorTabUi.cpp.40FE28608C848E1E.idx  LosEditorTabUi.h.09D8BB2A563B343E.idx  LosEditorUi.cpp.DEB62B7E60EE6D07.idx  LosEditorUi.h.EEA5E044591302FE.idx  LosFileContext.cpp.03979C5E297B8E62.idx  LosFileContext.h.ED1730AF14B9D1D2.idx  LosFileNode.cpp.0B038314A112F736.idx  LosFileNode.h.F4FC317BCEC97D3B.idx  LosFilePath.cpp.5D586043E4EB4B39.idx  LosFilePath.h.A3E5EE3A2639714D.idx  LosFileTreeModel.cpp.E571F31330193BF5.idx  LosFileTreeModel.h.1AE30385627BDC68.idx  LosFileTreeUi.cpp.2D60E76A8FECD330.idx  LosFileTreeUi.h.94B82D144A15799A.idx  LosFileType.h.75B38DD88C2DFD07.idx  LosFormatManager.cpp.AF04C026FE7068BA.idx  LosFormatManager.h.1A4BEDA1BBD81D06.idx  LosHighlighter.cpp.3D5E9B8367105AB9.idx  LosHighlighter.h.8C127CC86FA919C9.idx  LosIssuesUi.cpp.2DCDB67C2857B97E.idx  LosIssuesUi.h.39069CC931959BAB.idx  LosIssuesUi_style.h.7B7A07ACF101BE43.idx  LosLog.cpp.699E700901B33F17.idx  LosLog.h.5B12AA85EF998030.idx  (+16 more)
.github/workflows/: build.yml
_build/: .ninja_deps  .ninja_log  CMakeCache.txt  Perseus  build.ninja  cmake_install.cmake  compile_commands.json
_build/.qt/: QtDeploySupport.cmake
_build/Perseus_autogen/: deps  mocs_compilation.cpp
_build/Perseus_autogen/BAHRZXN6QD/: moc_LosEditorUi.cpp
_build/Perseus_autogen/E55L7CYTPC/: moc_LosEditorTabUi.cpp
_build/Perseus_autogen/EWIEGA46WW/: qrc_resources.cpp
_build/Perseus_autogen/EWMMRD43MR/: moc_LosFileTreeModel.cpp
_build/Perseus_autogen/UVLADIE3JM/: moc_Perseus.cpp
_build/Perseus_autogen/include/: ui_Perseus.h
docs/: AI_CONTEXT.md  README.md
docs/1_architecture/: design-patterns.md  modules.md  overview.md
docs/2_extensions/: development.md  protocol.md
docs/3_development/: git-workflow.md  setup.md
docs/4_ui_ux/: components.md  shortcuts.md  theme.md
drawio/: formatted_data_explanation.drawio
other/: Perseus.lnk  er_diagram.html  project1.drawio  test.html  ui_1.html
resources/config/: toolchain_config.json
resources/web/: terminal.html
src/: Perseus.cpp  Perseus.h  main.cpp
src/common/constants/: ConstantsClass.h  ConstantsErr.h  ConstantsNum.h  ConstantsStr.h  LiasType.h
src/common/enum/: LosFileType.h
src/common/util/: CheckLang.h  DebugPJson.h  FindExePath.h  FindMatchBracket.h  GetFilePath.h  GetLeadingWhiteSpace.h  GetSettingKey.h  NumberToCommandsKind.h
src/core/LosFileSystem/: LosFileSystem.cpp  LosFileSystem.h
src/core/LosFormatManager/: LosFormatManager.cpp  LosFormatManager.h
src/core/LosHighlighter/: LosHighlighter.cpp  LosHighlighter.h
src/core/LosLog/: LosLog.cpp  LosLog.h
src/core/LosNet/: LosNet.cpp  LosNet.h
src/core/LosPlatform/: LosPlatform.cpp  LosPlatform.h
src/core/LosRouter/: LosRouter.cpp  LosRouter.h
src/core/LosSesssion/: LosSesssion.cpp  LosSesssion.h
src/core/LosShortcutManager/: LosShortcutManager.cpp  LosShortcutManager.h
src/core/LosState/: LosState.cpp  LosState.h
src/core/LosTerminal/: LosTerminal.cpp  LosTerminal.h
src/core/LosToolChainManager/: LosToolChainManager.cpp  LosToolChainManager.h
src/ui/: Perseus.ui
src/view/: Perseus.ui  Perseus.ui.autosave
test/: CMakeLists.txt  LosTest.cpp  loc.sh
tools/: convert_comments.py
(+141 files in other folders)
